--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tailwind</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <p class="text-2xl italic font-semibold">
+        welcome to my site 
+    </p>
     
+    <p class="text-6xl text-red-500 font-semibold">
+       bnediugbne 
+    </p>
 </body>
 </html>
